# ChangeLog for dev-util/kdevelop
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/kdevelop/ChangeLog,v 1.25 2003/04/11 20:52:39 danarmak Exp $

  11 Apr 2003; Dan Armak <danarmak@gentoo.org> kdevelop-3.0_alpha3.ebuild:
  Trim down list of depndencies. Remove all toptional runtime dependencies from
  DEPEND/RDEPEND, and add an informational notice about them. Bug #6012 made the
  case that there were far too many of those and they had no place in RDEPEND
  without a use flag (and there's no suitable use flag).

  13 Mar 2003; Olivier Reisch <doctomoe@gentoo.org> kdevelop-2.1.5.ebuild:
  Marked ppc stable

*kdevelop-2.1.5 (04 Feb 2003)

  04 Feb 2003; Hannes Mehnert <hannes@gentoo.org> kdevelop-2.1.5.ebuild:
  version bump, thanks to Sascha Herrmann <Sascha.Herrmann@web.de> for
  help in bug #14536, this should also fix bug #3875, bug #14971, bug #8113,
  and bug #9958

  30 Jan 2003; Dan Armak <danarmak@gentoo.org> ChangeLog  :

  Change ebuilds to use kde_src_unpack() instead of base_src_unpack(). This
  does not affect in any way the compiled output, or any ebuild not suffering
  rfom the 'languageChange undeclared' bug, which it fixes.

*kdevelop-3.0_alpha3 (08 Jan 2003)

  22 Feb 2003;  <danarmak@gentoo.org> kdevelop-3.0_alpha3.ebuild :
  Add missing dep on doxygen, for which kdevelop 3.x has a plugin.

  08 Jan 2003; Hannes Mehnert <hannes@gentoo.org> kdevelop-3.0_alpha3.ebuild,
  kdevelop-3.0_alpha2.ebuild: version bump, added SLOT=3 to kdevelop-3.x.
  this fixes bug #13494, thanks to Sascha.Herrmann@web.de (Sascha Herrmann)

  04 Jan 2003; Hannes Mehnert <hannes@gentoo.org> kdevelop-3.0_alpha2.ebuild:
  added patch to compile with kde-3.0.5a. fixes #12913

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*kdevelop-3.0_alpha2 (30 Nov 2002)

  30 Nov 2002; Hannes Mehnert <hannes@gentoo.org> kdevelop-3.0_alpha2.ebuild:
  version bump
