@@ -1,10 +1,10 @@
 MD5 0de41bc59ee895e4ef47a0dc42c8d273 kdevelop-3.0_alpha2.ebuild 1078
-MD5 c4016870d9264531f42c2865d8c89c3b kdevelop-3.0_alpha4.ebuild 2783
+MD5 8f5ea1327a4c95427ad8861175f2595d kdevelop-3.0_alpha4.ebuild 2783
 MD5 d5f5a5a0a6253f352123365a201f3918 kdevelop-2.1.5.ebuild 1763
 MD5 51a2dfef524287054498db8e78caf00a kdevelop-2.1.3-r1.ebuild 2504
 MD5 1bf0c6f24a19fa920bb5a52c829b000d kdevelop-2.1.2.ebuild 2375
 MD5 6582002be83212ca1b1985b5d85f8b51 kdevelop-3.0_alpha3.ebuild 2783
-MD5 0ae6f7f4f36bcd24b6abde671e971032 ChangeLog 5156
+MD5 6dc99ffb5f5b2e40e5918544aaea3a63 ChangeLog 5285
 MD5 a646e210ae7d863f40b8c4b758e75afe files/digest-kdevelop-2.1.2 233
 MD5 5844083f843db38cd01fa7a77d677e51 files/digest-kdevelop-2.1.5 245
 MD5 04f506126fcc3a76e72f9c5adba3a2f5 files/kdevelop-2.1.5-gentoo.diff 4198
